# Capstone

./: .gitignore  Cargo.toml  README.md  main.py  test.py  test3.py
src/: events.rs  main.rs  main1.rs
src/linux/: keyboard.rs  mod.rs  peripherals.rs
src/mac/mac_support/: Cargo.toml
src/mac/mac_support/src/: event.rs  keyboard.rs  main.rs  mouse.rs
src/windows/: common.rs  keyboard.rs  mod.rs  mouse.rs
