[package]
name = "RustTesting"
version = "0.1.0"
authors = ["Wiktor"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.4"
tokio = { version = "0.2.11", features = ["full"] }
futures = "0.3"
futures-timer = "3.0"
crossterm = "0.18.2"
rdev = "0.4.5"
crossbeam-channel = "0.5.0"
lazy_static = "1.4.0"
inputbot = "0.5.0"
user32-sys = "0.2.0"
winapi = "0.3.9"
once_cell = "1.5.2"
# [dependencies.crossterm]
# version = "0.17"
# features = ["event-stream"] 