[package]
name = "RustTesting"
version = "0.1.0"
authors = ["Wiktor"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.4"
rdev = "0.4.5"
lazy_static = "1.4.0"
inputbot = "0.5.0"
user32-sys = "0.2.0"
winapi = "0.3.9"
once_cell = "1.5.2"
crossbeam-channel = "0.5.0" 
enigo = "0.0.14"
libp2p = { version = "0.31.0", features = ["tcp-tokio", "mdns-tokio"] }
tokio = { version = "0.3", features = ["io-util", "io-std", "stream", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"] }
serde = {version = "=1.0", features = ["derive"] }
serde_json = "=1.0"
log = "0.4"
pretty_env_logger = "0.4"
# [dependencies.crossterm]
# version = "0.17"
# features = ["event-stream"] 


[target.'cfg(target_os="linux")'.dependencies]
libc = "0.2.72"
input = "0.4.1"
nix = "0.17.0"
udev = "0.2.0"
x11 = { version = "2.18.2", features = ["xlib", "xtest"] }
uinput = { version = "0.1.3", default-features = false }