[package]
name = "Capstone"
version = "0.1.0"
authors = ["Wiktor"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
async-std = "1.4"
rdev = "0.4.5"
lazy_static = "1.4.0"
user32-sys = "0.2.0"
winapi = "0.3.9"
once_cell = "1.5.2"
crossbeam-channel = "0.5.0" 
libp2p = { version = "0.31.0", features = ["tcp-tokio", "mdns-tokio"] }
tokio = { version = "0.3", features = ["io-util", "io-std", "stream", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"] }
serde = {version = "=1.0", features = ["derive"] }
serde_json = "=1.0"
log = "0.4"
pretty_env_logger = "0.4"
chrono = "0.4.19"
local_ipaddress = "0.1.3"
whoami = "1.1.0"
mac_address = "1.1.1"
slice_as_array = "1.1.0"
crossbeam = "0.8.0"
crossbeam-utils = "0.8.3"
# [dependencies.crossterm]
# version = "0.17"
# features = ["event-stream"] 


[target.'cfg(target_os="linux")'.dependencies]
evdev-rs = "0.4.0"
evdev = "0.10.2"
input-linux = "0.4.0"
uinput = "0.1.3"
libc = "0.2.72"
input = "0.4.1"
nix = "0.17.0"
udev = "0.2.0"
x11 = { version = "2.18.2", features = ["xlib", "xtest"] }